--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>
-        World Vision DVS
+        WVIN - Sponsorship
     </title>
     <style>
         body {
